--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="./style.css">
     <title>weather</title>
 </head>
-
 <body>
     <div class="container ">
         <div class="main">
-            <div class="bk">it
+            <div class="bk">
                 <div class="search">
                     <input type="text" class="input" id="in" placeholder="search">
                 </div>
@@ -33,7 +32,7 @@
                     </div>
                     <img src="./images/wind.png">
                     <div class="city-wind-info">
-                        <h3 class="wind">15km/h</h4>
+                        <h3 class="wind">15km/h</h3>
                             <p class="wind"> wind speed</p>
                     </div>
                 </div>
